2004-09-09  Richard Henderson  <rth@redhat.com>

	PR middle-end/17367
	* function.c (assign_parm_setup_block): Only put PARALLELs into
	a register if use_register_for_decl.

2004-09-09  Eric Christopher  <echristo@redhat.com>

	* ra-colorize.c (reset_lists): Move variable declaration inside
	ENABLE_CHECKING to avoid unused variable warnings when
	not --enable-checking.
	(check_colors): Ditto.

2004-09-09  Mike Stump  <mrs@apple.com>

	* version.c (version_string): Bump to 4.0.0.
	* doc/include/gcc-common.texi (version-GCC): Likewise.

2004-09-10  Jakub Jelinek  <jakub@redhat.com>

	* doc/extend.texi (nothrow attribute): The attribute is not
	implemented in 3.2 and earlier.

2004-09-09  Steve Ellcey  <sje@cup.hp.com>

	* genrecog.c (compute_predicate_codes): Use op0_codes
	instead of codes.

2004-09-09  Ulrich Weigand  <uweigand@de.ibm.com>

	* ra-colorize.c (hardregset_to_string): Adapt to HARD_REG_SET
	implementation changes.

2004-09-09  Ulrich Weigand  <uweigand@de.ibm.com>

	* combine.c (try_combine): When swapping i2 and i3, newi2pat may be
	a PARALLEL instead of a SET due to added clobbers.

2004-09-09  Ulrich Weigand  <uweigand@de.ibm.com>

	* reload.c (find_reloads_address): Pass correct operand to
	maybe_memory_address_p.

2004-09-09  Daniel Berlin  <dberlin@dberlin.org>

	* Makefile.in: Remove libbanshee, tree-alias-*.
	Remove tree-alias-common.h dependencies.
	* common.opt: Remove -ftree-points-to.
	* configure.ac: Remove libbanshee.
	* flags.h: Remove pta_type, flag_tree_points_to.
	* gengtype.c (open_base_files): Remove tree-alias-type.h.
	* opts.c (OPT_ftree_points_to): Remove.
	* toplev.c: Remove tree-alias-common.h, flag_tree_points_to.
	* tree-dfa.c: Remove tree-alias-common.h
	* tree-into-ssa.c: Ditto.
	* tree-outof-ssa.c: Ditto.
	* tree-ssa-copyrename.c: Ditto.
	* tree-ssa-live.c: Ditto.
	* tree-optimize.c: Ditto.
	* tree-ssa.c: Ditto.
	Remove pass_build_pta, pass_del_pta.
	* tree-pass.h: Ditto.
	* tree-ssa-alias.c: Remove tree-alias-common.h.