@@ -1,3 +1,10 @@
+2004-09-09  Roger Sayle  <roger@eyesopen.com>
+
+	* config/i386/i386.c (ix86_split_long_move): When optimizing for
+	size, and the low and high parts of a DImode constant are equal,
+	copy one register to another instead of loading the same immediate
+	value twice.
+
 2004-09-09  Richard Henderson  <rth@redhat.com>
 
 	PR middle-end/17367
